cert-manager_ingress-controller_lets-ecrypt/09-create-ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: example-app
spec:
  tls:
  - hosts:
    - pereira.vasaiforyou.com   
    secretName: example-app-tls   # this is where the certiticate will be located
  rules:
  - host: pereira.vasaiforyou.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: example-service
            port: 
              number: 80


# curl -kv https://pereira.vasaiforyou.com
# *   Trying 20.92.219.95...
# * TCP_NODELAY set
# * Connected to pereira.vasaiforyou.com (20.92.219.95) port 443 (#0)
# * ALPN, offering h2
# * ALPN, offering http/1.1
# * successfully set certificate verify locations:
# *   CAfile: /etc/ssl/cert.pem
#   CApath: none
# * TLSv1.2 (OUT), TLS handshake, Client hello (1):
# * TLSv1.2 (IN), TLS handshake, Server hello (2):
# * TLSv1.2 (IN), TLS handshake, Certificate (11):
# * TLSv1.2 (IN), TLS handshake, Server key exchange (12):
# * TLSv1.2 (IN), TLS handshake, Server finished (14):
# * TLSv1.2 (OUT), TLS handshake, Client key exchange (16):
# * TLSv1.2 (OUT), TLS change cipher, Change cipher spec (1):
# * TLSv1.2 (OUT), TLS handshake, Finished (20):
# * TLSv1.2 (IN), TLS change cipher, Change cipher spec (1):
# * TLSv1.2 (IN), TLS handshake, Finished (20):
# * SSL connection using TLSv1.2 / ECDHE-RSA-AES128-GCM-SHA256
# * ALPN, server accepted to use h2
# * Server certificate:
# *  subject: CN=pereira.vasaiforyou.com
# *  start date: Mar 31 13:47:25 2022 GMT
# *  expire date: Jun 29 13:47:24 2022 GMT
# *  issuer: C=US; O=Let's Encrypt; CN=R3
# *  SSL certificate verify ok.
# * Using HTTP2, server supports multi-use
# * Connection state changed (HTTP/2 confirmed)
# * Copying HTTP/2 data in stream buffer to connection buffer after upgrade: len=0
# * Using Stream ID: 1 (easy handle 0x7ff893809600)
# > GET / HTTP/2
# > Host: pereira.vasaiforyou.com
# > User-Agent: curl/7.64.1
# > Accept: */*
# >
# * Connection state changed (MAX_CONCURRENT_STREAMS == 128)!
# < HTTP/2 200
# < date: Thu, 31 Mar 2022 16:47:45 GMT
# < content-type: text/html; charset=utf-8
# < content-length: 12
# < strict-transport-security: max-age=15724800; includeSubDomains
# <
# * Connection #0 to host pereira.vasaiforyou.com left intact
# Hello World!* Closing connection 0
